<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.StoreViewModel" />
    </data>

    <!-- added linear layout to center vertically scroll view content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >

                <TextView
                    android:id="@+id/logo"
                    style="@style/CenteredText"
                    android:textSize="@dimen/Titol1"
                    android:text="@string/ShoeStore"/>

                <ImageView
                    android:layout_width="@dimen/image"
                    android:layout_height="@dimen/image"
                    app:srcCompat="@drawable/shoes_icon_1320186144893068778"
                    android:contentDescription="@string/app_logo" />

                <TextView
                    android:id="@+id/email_label"
                    style="@style/GlobalText"
                    android:labelFor="@+id/email"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/email"
                    style="@style/EditText"
                    android:ems="10"
                    android:text="@={viewModel.userForm.email}"
                    android:inputType="textEmailAddress|textWebEmailAddress"/>

                <TextView
                    android:id="@+id/pwd_label"
                    style="@style/GlobalText"
                    android:labelFor="@+id/pwd"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/pwd"
                    style="@style/EditText"
                    android:text="@={viewModel.userForm.password}"
                    android:ems="10"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/login_button"
                    style="@style/GlobalText"
                    android:onClick="@{() -> viewModel.login()}"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/create_account_button"
                    style="@style/GlobalText"
                    android:onClick="@{() -> viewModel.login()}"
                    android:text="@string/signup" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</layout>